grammar.txt
FlowScript Grammar (Front-End Scope)

program      -> START NL* stmt_list END NL* EOF
stmt_list    -> (statement NL+)*
statement    -> declaration | assignment | print_stmt | if_stmt | repeat_stmt
			 | for_stmt | while_stmt | function_decl | return_stmt | continue_stmt | break_stmt
declaration  -> LET IDENT ASSIGN expression
			 | CONST IDENT ASSIGN expression
assignment   -> IDENT ASSIGN expression
print_stmt   -> PRINT ARROW expression
if_stmt      -> IF condition NL+ stmt_list ENDIF
repeat_stmt  -> REPEAT expression NL+ stmt_list ENDREPEAT
for_stmt     -> FOR IDENT ASSIGN expression TO expression NL+ stmt_list ENDFOR
while_stmt   -> WHILE condition NL+ stmt_list ENDWHILE
function_decl-> FUNCTION IDENT NL+ stmt_list ENDFUNCTION
return_stmt  -> RETURN expression?
continue_stmt-> CONTINUE
break_stmt   -> BREAK
condition    -> expression GREATER expression

expression   -> term ((PLUS | MINUS) term)*
term         -> factor ((STAR | SLASH) factor)*
factor       -> NUMBER | IDENT | LPAREN expression RPAREN

Lexical Notes:
- START token maps to '@start'
- END token maps to '@end'
- IF token maps to '@if'
- ENDIF token maps to '@endif'
- REPEAT token maps to '@repeat'
- ENDREPEAT token maps to '@endrepeat'
- FOR token maps to '@for'
- ENDFOR token maps to '@endfor'
- WHILE token maps to '@while'
- ENDWHILE token maps to '@endwhile'
- FUNCTION token maps to '@function'
- ENDFUNCTION token maps to '@endfunction'
- ASSIGN token maps to ':='
- ARROW token maps to '=>'
- GREATER token maps to '>'
- TO token maps to 'to'
- RETURN token maps to 'return' (alias: giveback)
- CONTINUE token maps to 'continue' (alias: skip)
- BREAK token maps to 'break' (alias: stop)
- Comments start with '#'

Unique Front-End Features:
- const declarations are immutable and cannot be reassigned.
- typo-aware parser diagnostics suggest closest keywords/directives.
- semantic analysis warns for declared-but-unused variables.
- CLI supports profiling and JSON compile reports.
